# pdf-extractor-api

./: .env.example  README.md  pyproject.toml
app/: config.py  main.py
app/controllers/: pdf_controller.py  worker_controller.py
app/models/: schemas.py
app/services/: llm_service.py  pdf_service.py
